--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,12 +27,12 @@ jobs:
       - name: Build with Sphinx
         run: |
           pip install -r requirements.txt
-          sphinx-build -b html book book/build/html
+          sphinx-build -b html book book/_build/html
 
       - name: Publish
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
-          folder: docs/build/html
+          folder: docs/_build/html
           clean: true
