--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ on:
     branches: [main]
   schedule:
     # every day at 4:00 -- ready for my morning coffee
+    # cheks compatibility with blackjax-nightly
     - cron: '0 4 * * *'
   workflow_dispatch:
 
@@ -16,23 +17,24 @@ jobs:
     steps:
       - name: Checkout the branch
         uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
 
-      - name: Build with Sphinx
+      - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          sphinx-build -b html book book/_build/html
 
-      - name: Publish
+      - name: Build the book
+        run: |
+          jupyter-book build -nW --keep-going book
+
+      - name: Publish to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
-          folder: book/_build/html
+          folder: ./book/_build/html
           clean: true
