--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-sphinx>=4.0.0
-myst-parser
-myst-nb
-sphinx-book-theme
-sphinx-design
+# Build the book
+jupyter-book
+jupytext
+
+# Dependencies for the notebooks
+# blackjax-nightly
