Use jupyter cache on PRs

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -7,11 +7,6 @@ email: remi@thetypicalset.com
 
 exclude_patterns: [README.md]
 
-# Force re-execution of notebooks on each build.
-# See https://jupyterbook.org/content/execute.html
-execute:
-  execute_notebooks: force
-
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
@@ -33,6 +28,8 @@ html:
   use_repository_button: true
 
 execute:
+  execute_notebooks: cache
+  cache: ./jupyter_cache
   timeout: 600
 
 sphinx:
