--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,15 @@ jobs:
       - name: Checkout the branch
         uses: actions/checkout@v2.3.1
 
+      - name: Jupyter Book cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ./jupyter_cache
+          key: ${{ github.event.number }}-jupyter-cache-${{ github.run_id }}
+          restore-keys: |
+            ${{ github.event.number }}-jupyter-cache
+
       - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
@@ -22,4 +31,7 @@ jobs:
           pip install -r requirements.txt
       - name: Build the book
         run: |
+          mkdir -p ./jupyter_cache
+          ls ./jupyter_cache
           jupyter-book build -nW --keep-going book
+          ls ./jupyter_cache
