--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Build the book
 ipython
-jupyter-book
+jupyter-cache
+git+https://github.com/executablebooks/jupyter-book.git@master
 jupytext
 
 # Dependencies for the notebooks
