Add Contour SGLD example

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,6 +4,7 @@ parts:
 - caption: Algorithms
   chapters:
   - file: algorithms/cyclical_sgld.md
+  - file: algorithms/contour_sgld.md
 - caption: Models
   chapters:
   - file: models/mlp
