--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build the book
         run: |
-          jupyter-book build -nW --keep-going book
+          jupyter-book build -nvW --keep-going book
 
       - name: Publish to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
