Add the Pathfinder example

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -5,6 +5,7 @@ parts:
   chapters:
   - file: algorithms/cyclical_sgld.md
   - file: algorithms/contour_sgld.md
+  - file: algorithms/Pathfinder.md
 - caption: Models
   chapters:
   - file: models/mlp
