--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -6,9 +6,16 @@ parts:
   - file: algorithms/cyclical_sgld.md
   - file: algorithms/contour_sgld.md
   - file: algorithms/pathfinder.md
+  - file: algorithms/PeriodicOrbitalMCMC.md
+  - file: algorithms/TemperedSMC.md
 - caption: Models
   chapters:
   - file: models/mlp.md
   - file: models/hierarchical_bnn.md
   - file: models/logistic_regression.md
   - file: models/sparse_regression.md
+  - file: models/change_of_variable_hmc.md
+  - file: models/GP_Marginal.md
+  - file: models/GP_EllipticalSliceSampler.md
+  - file: models/LogisticRegressionWithLatentGaussianSampler.md
+  - file: models/RegimeSwitchingModel.md
