--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,15 @@ jobs:
       - name: Checkout the branch
         uses: actions/checkout@v2.3.1
 
+      - name: Jupyter Book cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ./jupyter_cache
+          key: jupyter-cache-${{ github.run_id }}
+          restore-keys: |
+            jupyter-cache
+
       - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
