--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -5,10 +5,10 @@ parts:
   chapters:
   - file: algorithms/cyclical_sgld.md
   - file: algorithms/contour_sgld.md
-  - file: algorithms/Pathfinder.md
+  - file: algorithms/pathfinder.md
 - caption: Models
   chapters:
-  - file: models/mlp
+  - file: models/mlp.md
   - file: models/hierarchical_bnn.md
-  - file: models/LogisticRegression.md
-  - file: models/sparse_regression
+  - file: models/logistic_regression.md
+  - file: models/sparse_regression.md
