--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,5 @@ jobs:
         run: |
           mkdir -p ./jupyter_cache
           ls ./jupyter_cache
-          jupyter-book build -nW --keep-going book
+          jupyter-book build -n --keep-going book
           ls ./jupyter_cache
