--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build the book
         run: |
           mkdir -p ./jupyter_cache
-          jupyter-book build -nvW --keep-going book
+          jupyter-book build -nv --keep-going book
 
       - name: Publish to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
