--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ git+https://github.com/executablebooks/jupyter-book.git@master
 jupytext
 
 # Dependencies for the notebooks
+arviz
 blackjax-nightly
 datasets
 fastprogress
