--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -8,6 +8,7 @@ parts:
   - file: algorithms/pathfinder.md
   - file: algorithms/PeriodicOrbitalMCMC.md
   - file: algorithms/TemperedSMC.md
+  - file: algorithms/TemperedSMCWithOptimizedInnerKernel.md
 - caption: Models
   chapters:
   - file: models/change_of_variable_hmc.md
