--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 # Build the book
 ipython
 jupyter-cache
-git+https://github.com/executablebooks/jupyter-book.git@master
+jupyter-book
 jupytext
 
 # Dependencies for the notebooks
