--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Build the book
         run: |
+          mkdir -p ./jupyter_cache  
           jupyter book build --html
 
       - name: Publish to GitHub Pages
