--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,8 @@ jobs:
         run: |
           mkdir -p ./jupyter_cache
           ls ./jupyter_cache
+          cd book
           jupyter book build --html
+          cd ..
+          ls
           ls ./jupyter_cache
