Revert "upgrade to Jupyter Book v2 (#74)"
This reverts commit 85b5e2fe3050e8abaf4a1cd99d80254d3e95d25a.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Build the book
         run: |
-          mkdir -p ./jupyter_cache  
-          jupyter book build --html
+          mkdir -p ./jupyter_cache
+          jupyter-book build -nv --keep-going book
 
       - name: Publish to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
